--- a/templates/uniq_msi_files.tmpl
+++ b/templates/uniq_msi_files.tmpl
@@ -5,7 +5,6 @@
 
 <body>
 
-Stats<br>
 MSI files processed: {{stats[0]}} <br>
 Registry keys processed: {{stats[1]}} <br>
 Files processed: {{stats[2]}} <br>
@@ -15,7 +14,7 @@ Uniq packages: {{data|count}}
 {%for package in data%}
 
 <table border='1' width='100%'>
-<caption>ProductName-Manufacturer: {{package}}</caption>
+<caption><h3>Package: {{package}}</h3></caption>
 <col width="33%">
 <col width="33%">
 <col width="33%"> 
@@ -23,9 +22,9 @@ Uniq packages: {{data|count}}
 
 <thead>
 <tr>
-<td><b>Path, Version ( {{ data[package]['Paths']|count}} total )</b></td>
-<td><b>Registry Keys (Name,Key,Value,Root) ( {{ data[package]['Registry']|count}} total )</b></td>
-<td><b>Files ( {{ data[package]['Files']|count}} total )</b></td>
+<td><b>Packages<br>Path, Version ( {{ data[package]['Paths']|count}} total )</b></td>
+<td><b>Registry<br>Key,Value ( {{ data[package]['Registry']|count}} total )</b></td>
+<td><b>Files<br> Name, Size, Version ( {{ data[package]['Files']|count}} total )</b></td>
 </tr>
 </thead>
 
